# llm

./: README.md
llm_clients/: README.md  example.py  pyproject.toml  requirements.txt
llm_clients/llm_clients/: __init__.py  gemini.py  logger.py  openai.py  types.py  util.py  whisper.py
llm_clients/llm_clients/clients/: __init__.py  gemini.py  openai.py
sync_lyrics/: README.md  main.py  requirements.txt
sync_lyrics/sync_lyrics/: __init__.py  logger.py  types.py
sync_lyrics/sync_lyrics/entities/: __init__.py  alignment_with_audio.py
vocacolle/: main.py  requirements.txt
vocacolle/vocacolle/: __init__.py  logger.py
vocacolle/vocacolle/entities/: __init__.py  alignment.py  alignment_with_audio.py
